--- a/templates/index.html
+++ b/templates/index.html
@@ -239,7 +239,19 @@
       });
       if (!res.ok) {
         console.error("Something went wrong while setting the emotion");
+        return;
       }
+      await fetch(`/rave-mode`, {
+        method: "POST",
+        body: JSON.stringify({ state: "False" }),
+        headers: {
+          "Content-Type": "application/json",
+        },
+      });
+      raveState = false;
+      raveBtn.classList.remove("on");
+      raveBtn.classList.add("off");
+      raveBtn.innerHTML = "OFF";
     };
   </script>
 </html>
