--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,10 @@
         <div>
           <h3 class="px-4 py-2 md:w-2/3 bg-title bg-opacity-25 text-primary-light text-opacity-80">Primary</h3>
           <ul class="text-primary-light mt-4 flex flex-col gap-4">
-            <li>Power</li>
+            <li class="flex items-center gap-4">
+              <button onclick="toggleEyeTracking()" class="transition-all duration-500 rounded-full p-2 w-12 h-12 aspect-square" id="eye-btn"></button>
+              Eye tracking
+            </li>
             <li id="os"></li>
             <li>
               <input id="fan" type="range" max="100" min="0" step="10" value="0">
@@ -99,6 +102,8 @@
     const emotions = document.querySelectorAll("li.emotion");
     const hungary = document.getElementById("hungary");
     const fanRange = document.getElementById("fan");
+    const eyeBtn = document.getElementById("eye-btn");
+    let trackEye = false;
     let emotion = 0;
 
     //Setting default as active emotion when inicialized
@@ -119,6 +124,42 @@
         os.innerHTML = `Couldn't load OS`;
       }
     })
+
+    //Eye-tracking
+    if(trackEye){
+      eyeBtn.innerHTML = "ON";
+      eyeBtn.classList.add("on");
+    }else{
+      eyeBtn.innerHTML = "OFF";
+      eyeBtn.classList.add("off");
+    }
+    function toggleEyeTracking(){
+      fetch("/eye", {
+        method:"POST",
+        body: JSON.stringify({state: trackEye?"False":"True"}),
+        headers:{
+          "Content-Type":"application/json"
+        }
+      }).then((res)=>{
+        if(res.ok){
+          res.json().then(x => {
+            trackEye = x.state;
+          })
+        }
+      }).catch(()=>{
+        window.alert("Something went wrong!");
+      }).finally(()=>{
+        if(trackEye){
+          eyeBtn.classList.remove("on");
+          eyeBtn.classList.add("off");
+          eyeBtn.innerHTML = "OFF";
+        }else{
+          eyeBtn.classList.remove("off");
+          eyeBtn.classList.add("on");
+          eyeBtn.innerHTML = "ON";
+        }
+      });
+    }
 
     //Fan
     if(fanRange){
